# learn-opengl

./: CMakeLists.txt
resources/: fragment.shader  vertex.shader
src/: CMakeLists.txt  Shader.cpp  Shader.h  helloRectangle.cpp  helloShader.cpp  helloShader2.cpp  helloTriangle.cpp  helloWindow.cpp  main.cpp
